# diplomat-talk

./: README.md  expanded.rs.out  main.typ
js/: Indices.d.ts  Indices.mjs  LineSplitter.d.ts  LineSplitter.mjs  Spliterator.d.ts  Spliterator.mjs  Wrapper.d.ts  Wrapper.mjs  index.d.ts  index.mjs
kotlin/: .gitignore  build.gradle.kts  settings.gradle.kts
kotlin/src/jmh/kotlin/dev/gigapixel/rustbasel/: MarkovBench.kt  SplitBenchmark.kt
kotlin/src/main/kotlin/dev/gigapixel/rustbasel/: Indices.kt  Lib.kt  LineSplitter.kt  Markov.kt  MarkovKt.kt  Spliterator.kt  Wrapper.kt
kotlin/src/test/kotlin/dev/gigapixel/rustbasel/: TestMarkov.kt  TestMarkovKt.kt  Tests.kt
rust/: Cargo.toml  config.toml
rust/benches/: bench.rs  lipsum.txt
rust/proptest-regressions/: lib.txt
rust/src/: lib.rs  rust_text.txt  str_magic.rs
